[gd_scene load_steps=3 format=2]

[ext_resource path="res://MultiPlayer.gd" type="Script" id=1]
[ext_resource path="res://scenes/AcceptDialog.tscn" type="PackedScene" id=2]

[node name="MultiPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="HeaderLabel" type="Label" parent="."]
margin_left = 108.151
margin_top = 82.916
margin_right = 204.151
margin_bottom = 96.916
text = "SwordsMasters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateRoom" type="Button" parent="."]
margin_left = 150.16
margin_top = 368.291
margin_right = 414.16
margin_bottom = 420.291
text = "Create Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinRoom" type="Button" parent="."]
margin_left = 498.0
margin_top = 368.291
margin_right = 762.0
margin_bottom = 420.291
text = "Join Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" parent="." instance=ExtResource( 2 )]

[node name="NameTextBox" type="LineEdit" parent="."]
margin_left = 150.0
margin_top = 177.0
margin_right = 761.0
margin_bottom = 235.0
text = "Enter Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomIDTextBox" type="LineEdit" parent="."]
margin_left = 150.0
margin_top = 253.0
margin_right = 762.0
margin_bottom = 315.0
text = "Enter Room ID"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CreateRoom" to="." method="_on_CreateRoom_pressed"]
[connection signal="pressed" from="JoinRoom" to="." method="_on_JoinRoom_pressed"]
